--- a/pro_jardin_ami/src/assets/css/estilos.css
+++ b/pro_jardin_ami/src/assets/css/estilos.css
@@ -111,3 +111,16 @@ h1, h2, h3, h4, h5 {
 .bg-black {
   background-color: #111 !important;
 }
+
+/* Spinner */
+.cargar-spinner {
+  height: 100vh;
+  width: 100%;
+}
+
+
+/* dropdown-menu */
+.dropdown-menu {
+  display: block !important;
+  
+}
